# go2_chat_interface

./: CLAUDE.md  Go2_MCP.json  README.md  RULES.md  WORKOUT_PROCEDURE_DEFAULT.md  Workout_procedure.md  main.py  pyproject.toml
MCPs/: Go2_MCP.json  Go2_MCP_simulator.json  voice_server.py
chat/: __init__.py  audio.py  chat_loop.py  client.py  config.py  mcp_manager.py  workout_planner.py  workout_runner.py
